# ChangeLog for dev-java/gnu-classpath-inetlib
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-classpath-inetlib/ChangeLog,v 1.23 2007/05/26 22:45:41 betelgeuse Exp $

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-inetlib-1.0-r2.ebuild, gnu-classpath-inetlib-1.1-r2.ebuild:
  Add -j1 because this package doesn't like parallel make and switch to
  java-pkg_dojavadoc. Fixes bug #179897.

  28 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-inetlib-1.0-r2.ebuild, gnu-classpath-inetlib-1.1-r2.ebuild:
  Switch license to GPL-2-with-linking-exception as that is what the actual
  *.java files indicate (bug #172161).

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  gnu-classpath-inetlib-1.0-r2.ebuild:
  Stabilized on amd64 (see bug #155622).

  23 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  gnu-classpath-inetlib-1.0-r2.ebuild:
  stable x86, bug #155622

  15 Nov 2006; Vlastimil Babka <caster@gentoo.org>
  -gnu-classpath-inetlib-1.0-r1.ebuild,
  -gnu-classpath-inetlib-1.1-r1.ebuild:
  Punt revisions using old eclasses.

  29 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  gnu-classpath-inetlib-1.0-r2.ebuild, gnu-classpath-inetlib-1.1-r2.ebuild:
  Ensure building with correct bytecode.

  20 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  +files/gnu-classpath-inetlib-1.0-jdk15.patch,
  +files/gnu-classpath-inetlib-1.1-jdk15.patch,
  gnu-classpath-inetlib-1.0-r2.ebuild, gnu-classpath-inetlib-1.1-r2.ebuild:
  Fix building with 1.5+ jdk with patches based on upstream's changes in CVS.
  Closes bugs #143751 and #148166. Thanks to Taras Ciuriak
  <taras.ciuriak@gmail.com>, Martin Jansa <Martin.Jansa@mk.cvut.cz> for
  reporting, and Michael Schnake <schnake@composition.de> for providing the
  patches.

*gnu-classpath-inetlib-1.1-r2 (18 Sep 2006)
*gnu-classpath-inetlib-1.0-r2 (18 Sep 2006)

  18 Sep 2006; Joshua Nichols <nichoj@gentoo.org>